# AES11-2009

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md  quality-gates.yml
.github/instructions/: copilot-instructions.md  submodules.instructions.md
.github/prompts/: code-to-requirements.prompt.md
.github/workflows/: ci-standards-compliance.yml  ci.yml
01-stakeholder-requirements/: PROJECT-KICKOFF-SUMMARY.md  README.md  business-context.md  requirements-business.md  requirements-compliance.md  requirements-functional.md  requirements-performance.md  requirements-reliability.md  requirements-user.md  stakeholder-register.md  stakeholder-requirements-specification.md
02-requirements/: system-requirements-specification.md
02-requirements/functional/: REQ-F-CS-ANNEXA-ATOMIC.md  REQ-F-CS-ANNEXA-DT.md  REQ-F-CS-ANNEXA-FLAGS.md  REQ-F-CS-ANNEXA-LEN.md  REQ-F-CS-ANNEXA-TZ.md
03-architecture/: architecture-description.md  architecture-quality-scenarios.md
03-architecture/constraints/: technical-constraints.md
03-architecture/decisions/: ADR-001-hal-architecture.md  ADR-002-dars-state-machine.md  ADR-003-timing-and-timestamps.md  ADR-004-memory-management-strategy.md  ADR-005-external-standards-integration.md
03-architecture/diagrams/c4-model/: level-1-system-context.md  level-2-container.md  level-3-component-standards-lib.md  level-4-code-dars-core.md
03-architecture/interfaces/: interface-specs.md
04-design/components/: DES-C-001-dars-protocol-core.md  DES-C-002-synchronization-manager.md  DES-C-003-timing-window-processor.md  des-dars-capture.md  des-dars-gps-reference.md  des-dars-phase-tolerance.md
04-design/data/: DES-D-001-dars-info-model.md  DES-D-002-timing-reference-model.md
04-design/interfaces/: DES-I-001-dars-protocol-interface.md  DES-I-002-timing-source-interface.md  DES-I-003-synchronization-manager-interface.md  DES-I-004-platform-capabilities-interface.md
05-implementation/: README.md  implementation-plan-DES-C-001.md  implementation-plan-DES-C-002.md  implementation-plan-DES-C-003.md
07-verification-validation/: SFMEA-channel-status.md  TEST-DARS-STATE-001.md  TEST-DM-TIMINGWIN-001.md  TEST-SYNC-DEGRADE-001.md  TEST-SYNC-HOLDOVER-001.md  TEST-SYNC-RESELECT-001.md  TEST-SYNC-SELECT-001.md  TEST-TIMESRC-SNAPSHOT-001.md  TEST-TIMESRC-SNAPSHOT-002.md
docs/: spec-governance.md
docs/integration/: health-checks.md
docs/reliability/: cil-AES11-DARS-2009.md  defect-log.md  defect-log.yaml  operational-profile-AES11-DARS-2009.md  sfmea-AES11-DARS-2009.md
lib/Standards/AES/AES11/2009/core/: aes3_adapter.cpp  aes3_adapter.hpp  aes5_adapter.cpp  aes5_adapter.hpp  capture_range.cpp  capture_range.hpp  channel_status_constants.hpp  channel_status_utils.cpp  channel_status_utils.hpp  dars_protocol.cpp  dars_protocol.hpp  phase_tolerance.cpp  phase_tolerance.hpp  sample_rate_validation.cpp  sample_rate_validation.hpp  timing_snapshot_service.cpp  timing_snapshot_service.hpp  timing_window_processor.cpp  timing_window_processor.hpp
lib/Standards/AES/AES11/2009/sync/: gps_reference_sync.cpp  gps_reference_sync.hpp  synchronization_manager.cpp  synchronization_manager.hpp
lib/Standards/Common/interfaces/: clock_interface.hpp
lib/Standards/Common/reliability/: events.cpp  events.hpp  metrics.cpp  metrics.hpp
lib/Standards/Common/testing/: fault_injection.hpp
reports/: traceability-matrix.md
scripts/: generate-traceability-matrix.py  validate-spec-structure.py  validate-trace-coverage.py
scripts/ci/: check-code-quality.py  check-test-headers-and-naming.py  check-traceability-headers.py  compute-ddr.py  generate-cpp-coverage.py  make-coverage-badge.py
scripts/generators/: build_trace_json.py  spec_parser.py
scripts/helpers/: list_missing_links.py
spec-kit-templates/schemas/: architecture-spec.schema.json  requirements-spec.schema.json
tests/cpp/: CMakeLists.txt  test_aes3_adapter.cpp  test_aes5_adapter.cpp  test_capture_range.cpp  test_channel_status_annex_a.cpp  test_channel_status_bitfields.cpp  test_channel_status_constants.cpp  test_channel_status_utils.cpp  test_dars_protocol.cpp  test_datetime_channel_status.cpp  test_fault_injection.cpp  test_gps_reference_sync.cpp  test_phase_tolerance.cpp  test_reliability_events.cpp  test_reliability_metrics.cpp  test_sample_rate_validation.cpp  test_sync_selection.cpp  test_timesrc_snapshot.cpp  test_timing_window_processor.cpp  test_trp_detection_scan.cpp
